# rinha-de-backend-2023-q3

./: README.md
fastapi/: Dockerfile  Makefile  docker-compose.prd.yml  docker-compose.yml  pyproject.toml  script.sql
fastapi/app/: db.py  main.py
